--- a/docker_registry_face/templates/image_list.html
+++ b/docker_registry_face/templates/image_list.html
@@ -47,12 +47,12 @@
        <div class="row panel panel-default">
             <div class="panel-heading">镜像列表 <span id="image_title"></span></div>
             <div class="panel-body">
-                <div class="row" style="margin-bottom: 15px">
-                    <div class="col-md-9">
+                <div class="row">
+                    <div class="col-md-9" style="margin-bottom: 13px">
                         <button type="button" class="btn btn-primary" id="btn_collapse_all" onclick="collapseAll()">收起所有</button>
                     </div>
 
-                    <div class="col-md-3">
+                    <div class="col-md-3" style="margin-bottom: 13px">
                         <div class="input-icon-group">
                             <div class="input-group">
                                 <input type="text" class="form-control" id="ipt_search_images" placeholder="搜索镜像 ..." autofocus/>
