--- a/docker_registry_face/templates/settings.html
+++ b/docker_registry_face/templates/settings.html
@@ -26,7 +26,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
-                <h4 class="modal-title" id="mdl_info_title">Small modal</h4>
+                <h4 class="modal-title" id="mdl_info_title"></h4>
                 </div>
                 <div class="modal-body" style="margin-bottom: 15px">
                     <span id="mdl_info_body"></span>
